# rift-github-runner

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  notify-manifests.yml
rift_github_runner/: cleanup.py  cloudinit.py  cloudrift_client.py  config.py  github_client.py  main.py  repo_config.py  state.py  webhook.py
tests/: conftest.py  test_cloudinit.py  test_cloudrift_client.py  test_github_client.py  test_main.py  test_repo_config.py  test_state.py  test_webhook.py
